<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tela01">

    <EditText
        android:id="@+id/et_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registro"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/bt_listafazendas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lista_de_fazendas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fazenda"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_valor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_registro"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/longitude"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/bt_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_latitude"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="77dp"
        android:layout_height="21dp"
        android:text="@string/fazendinha"
        app:layout_constraintBottom_toTopOf="@+id/et_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/latitude"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_valor"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/bt_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar"
        app:layout_constraintBottom_toTopOf="@+id/bt_mostrar"
        app:layout_constraintEnd_toStartOf="@+id/bt_atualizar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_longitude"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/valor"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_latitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nome"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/bt_atualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atualizar"
        app:layout_constraintBottom_toTopOf="@+id/bt_excluir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_add"
        app:layout_constraintTop_toBottomOf="@+id/et_longitude"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_fazenda"
        android:layout_width="254dp"
        android:layout_height="109dp"
        android:text="@string/fazenda"
        app:layout_constraintBottom_toTopOf="@+id/bt_listafazendas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_excluir"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/bt_mostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_fazenda"
        app:layout_constraintBottom_toTopOf="@+id/tv_fazenda"
        app:layout_constraintEnd_toStartOf="@+id/bt_excluir"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_add"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/bt_excluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Excluir"
        app:layout_constraintBottom_toTopOf="@+id/tv_fazenda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_mostrar"
        app:layout_constraintTop_toBottomOf="@+id/bt_atualizar"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>